changed structure of project

--- a/pureHTMLJS/index.html
+++ b/pureHTMLJS/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
     <my-first-component></my-first-component>
+    <pure-js-component></pure-js-component>
     <a is="custom-anchor" href="http://www.google.com">Go to Google</a>
+    <hr />
+    
+    <h2>Random quote</h2>
+    <dj-random-quote interval="5000"></dj-random-quote>
+
     <script src="main.js"></script>
+    <script src="purejs-component.js"></script>
+    <script src="rw-random-quote.js"></script>
 </body>
 </html>
