--- a/pureHTMLJS/index.html
+++ b/pureHTMLJS/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Web components inno day</title>
+    <script src="ngElements.js" type="text/javascript"></script>
 </head>
 <body>
     <my-first-component></my-first-component>
@@ -14,6 +15,10 @@
     
     <h2>Random quote</h2>
     <dj-random-quote interval="5000"></dj-random-quote>
+
+    <hr />
+    <h2>Angular exported random quote</h2>
+    <ng-random-quote></ng-random-quote>
 
     <script src="main.js"></script>
     <script src="purejs-component.js"></script>
