--- a/pureHTMLJS/index.html
+++ b/pureHTMLJS/index.html
@@ -24,6 +24,6 @@
 
     <script src="main.js"></script>
     <script src="purejs-component.js"></script>
-    <script src="rw-random-quote.js"></script>
+    <script src="dj-random-quote.js"></script>
 </body>
 </html>
